# ministrace

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  _Makefile  gen_syscalls.py  gen_tables.py  ministrace.c  syscallents.h  syscalls.h
attic/: iotrace.h
attic/examples/: jailer.c  ptrace_daemon_threadish_example.c  ptrace_multi_threaded_demo.cpp  ptrace_threadish_example.c  stack_trace.c
attic/examples/archive/: ptrace_threadish_example.c  static_lookup_table.h
attic/github-workflows/: ubuntu.yml
cmake/: AddGitSubModule.cmake
ext/: CMakeLists.txt
scripts/: gen_syscalls.py
scripts/compile/: gen_syscalls_table.py
scripts/dev/: string_utils.py
scripts/helpers/: gen_unwind_fct_name_consts.py
src/: CMakeLists.txt  cli.c  cli.h  error.h  main.c  ministrace.c  syscall_types.h  syscalls.h  trace_ptrace.c  trace_ptrace.h  trace_syscalls.c  trace_syscalls.h  trace_tmap.c  trace_tmap.h
src/arch/: trace_ptrace.c  trace_ptrace.h
src/common/: error.h  string_utils.c  string_utils.h
src/libs/hashmap/: CMakeLists.txt  atomic_hash.c  atomic_hash.h
src/libs/hashmap/hash_functions/: hash_city.c  hash_city.h  hash_md5.c  hash_md5.h  hash_mpq.c  hash_mpq.h  hash_murmur3.c  hash_murmur3.h  hash_newhash.c  hash_newhash.h
src/trace/: tracing.c  tracing.h
src/trace/internal/: ptrace.c  ptrace.h  ptrace_arch.h  ptrace_fcts.c  ptrace_fcts.h  ptrace_utils.c  ptrace_utils.h  syscall_types.c  syscall_types.h  syscalls.c  syscalls.h  tmap.c  tmap.h  unwind.c  unwind.h
src/trace/internal/arch/: ptrace_utils.c  ptrace_utils.h
test/: CMakeLists.txt  testing_trace_tmap.c  tmap_test.c  trace_descendants.c  trace_pthread_fork.c  ultimate_test_program.c
